panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_error_redeclaration_with_different_tag.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: struct redeclared as union
   ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:6:11]
   │
 6 │     union T;
   │           ┬  
   │           ╰── redeclared here as `union`
───╯

Error: struct redeclared as union
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:15:11]
    │
 15 │     union U value;
    │           ┬  
    │           ╰── redeclared here as `union`
────╯

Error: struct redeclared as union
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:15:11]
    │
 15 │     union U value;
    │           ┬  
    │           ╰── redeclared here as `union`
────╯

Error: union redeclared as struct
    ╭─[panko/tests/cases/execute/struct/test_error_redeclaration_with_different_tag.c:24:12]
    │
 24 │     struct V {
    │            ┬  
    │            ╰── redeclared here as `struct`
────╯
